Fixed flickering when reordering a list by drag and drop

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -619,6 +619,7 @@ html {
   padding: 20px 24px;
   border-bottom: solid 1px var(--clr-border);
   color: var(--clr-task-text);
+  background-color: var(--clr-wrapper-background);
 }
 .task > * + * {
   margin-left: 24px;
