--- a/src/styles/sass/components/_task.scss
+++ b/src/styles/sass/components/_task.scss
@@ -7,6 +7,7 @@
   border-bottom: solid 1px var(--clr-border);
 
   color: var(--clr-task-text);
+  background-color: var(--clr-wrapper-background);
 
   & > * + * {
     margin-left: 24px;
